# beaconator

./: .flake8  .gitignore  README.md  docker-compose.yml  noxfile.py  pyproject.toml
.github/workflows/: tests.yml
beaconator/: asgi.py  cli.py  config.py
beaconator/backend/: dao.py  database.py  models.py  schemas.py  server.py
beaconator/backend/utils/: http.py  images.py  other.py  secrets.py
beaconator/frontend/: .eslintrc.js  .prettierrc.json  package.json  tailwind.config.js  vue.config.js
beaconator/frontend/public/: index.html
beaconator/frontend/src/: App.vue  main.js
beaconator/frontend/src/assets/styles/: tailwind.css
beaconator/frontend/src/components/cards/codes/: CodeCard.vue
beaconator/frontend/src/components/cards/properties/: PropertyCard.vue
beaconator/frontend/src/components/forms/accounts/: LoginForm.vue
beaconator/frontend/src/components/forms/codes/: CodeForm.vue
beaconator/frontend/src/components/forms/inputs/: FormInput.vue  (+3 more)
beaconator/frontend/src/components/modals/: FormModal.vue  SidebarModal.vue
beaconator/frontend/src/mixins/: api.js  form.js
beaconator/frontend/src/plugins/: icons.js  meta.js
beaconator/frontend/src/router/: index.js
beaconator/frontend/src/store/: index.js
beaconator/frontend/src/utils/: index.js  ui.js
beaconator/frontend/src/views/accounts/: Login.vue
beaconator/frontend/src/views/codes/: Codes.vue
beaconator/frontend/src/views/properties/: Properties.vue
data/: base_config.yml
docker/: Dockerfile  Dockerfile.old  entrypoint.sh
docker/supervisor/: supervisor.conf
tests/: conftest.py  test_backend.py  test_beaconator.py  test_cli.py
(+1 files in other folders)
